# mcfgthread-mingw

./: .gitignore  MCFLicense.txt  Makefile.am  README  README.md  build_i386.sh  build_i686.sh  build_x86_64.sh  configure.ac
release/mingw/include/mcfgthread/env/: _crtdef.h  avl_tree.h  clocks.h  gthread.h
release/mingw/include/mcfgthread/ext/: wcpcpy.h
release/mingw32/include/mcfgthread/: c11thread.h
release/mingw32/include/mcfgthread/env/: _c11thread_inl.h  condition_variable.h  mcfwin.h  mutex.h
release/mingw64/include/mcfgthread/env/: bail.h  thread.h  thread_env.h
release/mingw64/include/mcfgthread/ext/: assert.h  expect.h
src/: dll_startup.c  gthread.h
src/env/: _gthread_inl.h  _nt_timeout.h  _seh_top.c  _seh_top.h  avl_tree.c  bail.c  c11thread.c  c11thread.h  clocks.c  condition_variable.c  gthread.c  heap.c  heap.h  mutex.c  once_flag.c  once_flag.h  thread.c  thread_env.c
src/ext/: assert.c  itow.c  itow.h  wcpcpy.c
test/: test.c
